fix: Hex cells render cut off in windows 10

--- a/src/main/resources/style/base.css
+++ b/src/main/resources/style/base.css
@@ -61,16 +61,16 @@
  */
 	/* Hide hex scroll bars */
 .hex-wrapper .table-view .scroll-bar:vertical .track {
-	-fx-padding: 0px;
+	-fx-padding: 0;
 	-fx-background-color: transparent;
 	-fx-border-color: transparent;
-	-fx-background-radius: 0em;
-	-fx-border-radius: 2em;
+	-fx-background-radius: 0;
+	-fx-border-radius: 2;
 }
 .hex-wrapper .table-view .scroll-bar:vertical .increment-button ,
 .hex-wrapper .table-view .scroll-bar:vertical .decrement-button {
 	-fx-background-color: transparent;
-	-fx-background-radius: 0em;
+	-fx-background-radius: 0;
 	-fx-padding: 0 0 0 0;
 }
 .hex-wrapper .table-view .scroll-bar:vertical .increment-arrow,
@@ -105,6 +105,7 @@
 }
 .hex-cell {
 	-fx-font-family: 'monospaced';
+	-fx-padding: 0;
 }
 .hex-cell *.text-field {
 	-fx-font-family: 'monospaced';
